# ByteTrack

./: .gitignore  Dockerfile  GLOBAL_VARIABLES.py  Models.py  README.md  conda.yaml  demo_track.py  helpers.py  output_test_deep_sort.avi  pyproject.toml  reqs.txt  requirements.txt  run_tracker.py  run_tracking.sh  setup.cfg  setup.py  zalert_dev.yml  zalert_dev_linux.yml
External_Model_Files/byte_tracking/: Dockerfile  LICENSE  README.md  requirements.txt  setup.py
External_Model_Files/byte_tracking/deploy/TensorRT/cpp/: CMakeLists.txt  README.md
External_Model_Files/byte_tracking/deploy/TensorRT/cpp/include/: BYTETracker.h  STrack.h  dataType.h  lapjv.h
External_Model_Files/byte_tracking/deploy/TensorRT/cpp/src/: STrack.cpp  bytetrack.cpp  kalmanFilter.cpp  lapjv.cpp
Interfaces/: ModelClassInterface.py
Model_Classes/: Norfair.py  YoloV5_6.py  byte_tracker.py  deep_sort.py
Result_Modules/: FrontendPosterResults.py  ObjectDetectionResults.py  ObjectTrackerResults.py  ProcessorResults.py  Results.py  VisualizerResults.py
deploy/DeepStream/: CMakeLists.txt  README.md
deploy/DeepStream/cmake/: FindGLib.cmake
deploy/DeepStream/includes/: BYTETracker.h  DataType.h  KalmanFilter.h  Lapjv.h  STrack.h  Tracker.h
deploy/DeepStream/src/: BYTETracker.cpp  BYTETrackerUtils.cpp  KalmanFilter.cpp  Lapjv.cpp  NvMOTContext.cpp  STrack.cpp  Tracker.cpp
deploy/ONNXRuntime/: README.md  onnx_inference.py
evaluation_data/: annotations.xml  prepare_gt.py
tools/: check_frame.py  convert_cityperson_to_coco.py  convert_ethz_to_coco.py  demo.py  demo_track.py  dti.py  export_onnx.py  interpolation.py  mix_data.py  mix_data_ablation.py  mix_data_test.py  mix_data_test_mot17.py  mix_data_test_mot20.py  mota.py  post_rename.py  track.py  track_deepsort.py  track_motdt.py  track_sort.py  trt.py
tools_yolov5/: demo_track_yolov5.py  demo_track_yolov5_v6.py  export_onnx_yolov5.py
tools_yolov5/models/: experimental.py
tools_yolov5/utils/: datasets.py  downloads.py  general.py  general_v4.py
tools_yolov5/yolov5_v4/: __init__.py
tutorials/centertrack/: README.md  byte_tracker.py  opts.py  tracker.py  tracker_kalman.py
tutorials/cstrack/: README.md  byte_tracker.py  cstrack.py  cstrack_new.py  fairmot_tracker.py  motion_tracker.py  tracker.py
(+258 files in other folders)
